--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "n",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "node-cmd": "^3.0.0"
+  "devDependencies": {
+    "electron": "^10.1.2"
   }
 }
